--- a/trunk/LaTeX/Undervejs/guidescription.tex
+++ b/trunk/LaTeX/Undervejs/guidescription.tex
@@ -1,6 +1,34 @@
 \section{GUI Description}
 
-Before the GUI was programmed, sketches of how the program should look like were made, and it did not quite end up as the sketches look like. This happened because the sketches had not any 'base form'. Practically the sketches were made without thought of how it would be to program. 
+The main window of the program looks like this.
+
+\figur{}{..\..\GUI\Screenshots\Mainwindow.png}
+
+In the main window there are instructions on how to use the program, there is an "About" button which tells who we are and what we do. There are the "Manage Items" and "Manage Suitcases" buttons where the user can add/edit items/suitcases. The button "Load Saved List" can be used if the user previously has made a list and wants to add/edit some items or a suitcase. The "Start Packing" button starts the program's algorithm and packs the suitcase(s). The progress bar is associated with the "Start Packing" button and starts when the user presses "Start Packing".
+
+\figur{}{..\..\GUI\Screenshots\ManageItems.png}
+The Manage Items menu is where the user can add and/or edit items.
+
+\figur{}{..\..\GUI\Screenshots\ManageSuitcase.png}
+Add/edit suitcases in the Manage Suitcase menu.
+
+\figur{}{..\..\GUI\Screenshots\About.png}
+The About button which tells who the programmers are, and it shows when the program was made.
+
+\figur{}{..\..\GUI\Screenshots\AddItem.png}
+When the user presses the "Add Item" button in Manage Items, this form shows. In the form there is a text box, where the user types the name of the current item. There are 5 other text boxes which are for the length, width, height, weight, and amount of that item.
+
+\figur{}{..\..\GUI\Screenshots\AddSuitcase.png}
+When the user presses the "Add Suitcase" button in Manage Suitcases, the user can add and/or edit a suitcase's data. The length, width, height, weight, and the maximum weight of the suitcase. 
+
+\figur{}{..\..\GUI\Screenshots\EditItem.png}
+If the user wants to edit an item, he/she can press the "Edit Item" button in Manage Items, and this form shows. In the form there are 6 text boxes for each input parameter, and a button saying "Edit", which saves the changes the user has made and closes the form.
+
+\figur{}{..\..\GUI\Screenshots\EditSuitcase.png}
+In "Manage Suitcase", there is a button called "Edit Suitcase". It allows the user to change the data of a suitcase, if e.g. the measurements are wrong, or the user wants to use another suitcase, which have not the same measurements.
+
+\figur{}{..\..\GUI\Screenshots\LoadSavedLists.png}
+If the user already has used the program before and has saved an item list and a suitcase list, both can be loaded here.
 
 \subsection{3D viewer}
 The 3D viewer shows how the program have packed the different items in the suitcases.
