--- a/LaTeX/Undervejs/first test.tex
+++ b/LaTeX/Undervejs/first test.tex
@@ -17,4 +17,9 @@ The second attempt on the second test was made a short time after the first atte
 
 \section{The Second Round of Tests of the Program}
 
-The second round of tests was made a week after the second test. The test went without any technological problems and was an success. After the two tests the following was changed 
+The second round of tests was made a week after the second test. The test went without any technological problems and was an success. After the two tests the following was changed. Since both test persons complained about the time it would take to put in all the info needed in the program, a drop down menu of some standard items has been added in the "Add item"-window in the "Manage items"-window. A better description of what is the bottom in the suitcase has been added in the 3D-viewer. The little box showing the (0,0,0)-coordinate has been described in the 3D-viewer too. The problem about a lot of items being packed upright was been solved and the algorithm has been optimized. A better description on how to add more of the same thing has been added to the instructions. If you are managing a already saved list and click the "Save list to Computer"-button the program will now ask if you want to overwrite your saved list. In the 3D-viewer the unit for the suitcase(s) weight has been added. 
+
+standard items drop down
+
+
+
