--- a/trunk/LaTeX/Klar til at blive rettet af andre/programplanning - DØ MAND!.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/programplanning - DØ MAND!.tex
@@ -1,8 +1,8 @@
-\section{Program planing}
+\section{Program planning}
 This section is to plan how the program should work and describe the flow of the program. The program will be described in a flowchart to give an overview of the whole program. A flowchart is a useful tool when programming because it explains the structure of the program.
 
-To give a more precise explanation of a program the flowchart can be formed into a pseudo code which is a level above real code. Pseudo code is used as a schematic for the program and thereby give some foresight into any problems that can be encountered when writing the actual code. Thus planing ahead and designing the program so a minimum amount of code errors and unexpected problems occurs.
-The program planing will be used to make it easier to develop the program and help make a better product in terms of structure.
+To give a more precise explanation of a program the flowchart can be formed into a pseudo code which is a level above real code. Pseudo code is used as a schematic for the program and thereby give some foresight into any problems that can be encountered when writing the actual code. Thus planning ahead and designing the program so a minimum amount of code errors and unexpected problems occur.
+The program planning will be used to make it easier to develop the program and help make a better product in terms of structure.
 
 When the program starts, it should show the main window. Here the user can load saved lists, manage the item list or the suitcase list, the instructions are shown, there is a button that will show information about the program and the button that will start the packing of the suitcase. In the manage windows the user are able to clear the list, add new items, edit items, delete items, and save the list. If one or both of the lists are empty when the user clicks the "Start packing"-button the program will inform the user that there needs to be atleast one item and suitcase for the program to be able to pack the suitcase(s) and item(s). After managing the list the user are asked to click the "Start packing"-button.
 
