--- a/LaTeX/Klar til at blive rettet af andre/function_draw_cubes.tex
+++ b/LaTeX/Klar til at blive rettet af andre/function_draw_cubes.tex
@@ -71,11 +71,13 @@ The fourth Vector thereby becomes (20, 25, 50), and can be seen on image \ref{im
 \figur{0.7}{6.PNG}{First point of the first side of the example item}{imageoffirstpointoffourthvector}
 
 
-By drawing a line between these four points, it is clear that these form a square, that is the first side of the item in the example. This can be seen on image \ref{finalimageoffirstsideinexampleitem}
+By drawing a line between these four points, it is clear that these forms a square, that is the first side of the item in the example. This can be seen on image \ref{finalimageoffirstsideinexampleitem}
 \figur{0.7}{7.PNG}{How the first side of the example item looks}{finalimageoffirstsideinexampleitem}
 
-When the four Vectors has been calculated, the Vectors are inserted into a new Polygon, which is inserted into an array of polygons.  Next the current Polygon (the one just created), is assigned a Pen. The Pen contains the color and with of the Polygon. This can be seen on Listing \ref{addtopolyandaddtoarrayandassignpen}
+When the four Vectors has been calculated, the Vectors are inserted into a new Polygon, which is inserted into an array of polygons.  Next the current Polygon (the one just created), is assigned a Pen. The Pen contains the color and the width of the Polygon. This can be seen on Listing \ref{addtopolyandaddtoarrayandassignpen}
 
 \kode{Calculate the points of the fourth vector}{addtopolyandaddtoarrayandassignpen}{AddVecToPolyArray.txt}
 
-This was the first side of the item. For the rest of the sides basically the same happens only with similar calculations. 
+This was the first side of the item, it is basically the the same for the rest of the sides. 
+
+%No we are not drunk this is how the 3d viewer works
