--- a/LaTeX/Klar til at blive rettet af andre/guidescription - Kasper.tex
+++ b/LaTeX/Klar til at blive rettet af andre/guidescription - Kasper.tex
@@ -1,6 +1,7 @@
 \section{GUI Description}
 
-The main window of the program looks like this.
+The GUI(Graphical User Interface) as the name implies is the interface the user interacts with when operating the program.
+And the main window of the program looks like this.
 
 \figur{}{..\..\GUI\Screenshots\Mainwindow.png}
 
