--- a/LaTeX/Undervejs/ThePackingAlgorithmCode.tex
+++ b/LaTeX/Undervejs/ThePackingAlgorithmCode.tex
@@ -26,7 +26,8 @@ As seen on the figure, the first thing which is done is to sort the suitcases an
 The method to sort the luggages and items will sort them by size, so the largest items will be attempted to be packed first in the biggest suitcases. This will give a better packing, because the smallest items are easier to fit than the big items.
 \subsubsection{Weight Distribution}
 The average distribution of weight in the luggage is calculated before going in the loop of the packing algorithm. In the flowchart on Figure \ref{fig:flowalgo} it will "Find next suitcase" when packing a item. This is not as simple as shown in the algorithm. The next suitcase is found by not only size, but also weight. It will start with the largest luggage and see if the weight of the suitcase, its content and the item to pack will exceed the average weight per luggage. If it does it will try to use the next luggages. If the item cannot be fitted in any luggage using the average weight, it will try again with only the maximum weight of the luggage in mind, so a item can be packed even though it exceeds the average weight per suitcase. The code of this can be seen on Listing \ref{list:CheckWeight}, where the stop\_check\_for\_avg\_weight variable checks if there should still be check for average weight. The lug\_id variable if the index in the luggages list of the suitcase which is checked now. The lug\_items\_counter is the index of the item to pack. This loop will continue until the item is packed, or every possibility has been tried.
-\kode{The statements checking if the item can be fitted in this luggage by weight.}{CheckWeight}{AvgWeight.txt}
+\kode{The statements checking if the item can be fitted in this luggage by weight. (From the method pack\_items in the Main form)}{CheckWeight}{AvgWeight.txt}
 \subsubsection{Checking For Fit in Pivot Points}
-If the item could be packed in a suitcase by weight, the algorithm will try to fit the items by weight. The next point is calculated by a sorted list of packing points. The list is sorted so the item is tried packed at the lowest points first. This is done in the find\_next\_pivot\_point function in the luggage class. If the item placed in the given pivot point without exceeding the dimensions of the suitcase it will call the method in "check\_item\_for\_fit" in the luggage class.
-\kode{The method 
+If the item could be packed in a suitcase by weight, the algorithm will try to fit the items by weight. The next point is calculated by a sorted list of packing points. The list is sorted so the item is tried packed at the lowest points first. This is done in the find\_next\_pivot\_point function in the luggage class. If the item placed in the given pivot point without exceeding the dimensions of the suitcase it will call the method in "check\_item\_for\_fit" in the luggage class. This method will run through all the effected point and check if there are placed any items in the points. This method can be seen on Listing \ref{list:CheckForFit}, where the function will check every point in the array value. This value is an indicator of how many elements which is placed in the point (the value should of course never be higher than one).
+\kode{The method to check if the item can be placed at the pivot\_test\_point (from the luggage class in the Main form)}{CheckForFit}{CheckForFit.txt}
+If the item cannot be fitted in the point in the luggage, the item will be rotated and tried fitted again. If every rotation possibilities has been tried, it will use the next packing point - or if no more packing points, the next suitcase.
