--- a/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -11,7 +11,7 @@
 \cleardoublepage
 \input{formalia/Underskriftsside.tex}
 \cleardoublepage
-\input{formalia/forord}
+\input{formalia/prolog.tex}
 \cleardoublepage
 
 %%%% Indholdsfortegnelse (TOC) %%%%
@@ -60,13 +60,16 @@
 \input{indhold/design/Specificationrequirement.tex}
 \input{indhold/design/Solutionsuggestions.tex}
 \input{indhold/design/programplanning.tex}
+\input{indhold/design/ThePackingAlgorithm.tex}%
 
 \chapter{Development}
 \label{chap:development}
-
+\input{indhold/development/developmentintro.tex}
+\input{indhold/development/ColorGiver.tex}
 
 \chapter{Testing} 
 \label{chap:testing}
+\input{indhold/testing/testIntro.tex}
 
 \chapter{Discussion}
 \label{chap:Discussion}
