--- a/LaTeX/Rapport - NIX PILLE/formalia/prolog.tex
+++ b/LaTeX/Rapport - NIX PILLE/formalia/prolog.tex
@@ -4,4 +4,4 @@ This project is made by Rasmus Fischer Gadensgaard, Christian Jødal O’Keeffe,
 
 Most of us come from Tech College Aalborg, but some come from other colleges. We all chose University of Aalborg because we like the PBL model. PBL stands for Problem Based Learning and it is a unique learning method that is only used at University of Aalborg and Roskilde University Centre.
 
-The goal with this project is to give us skills in using the programming language C# (C-Sharp), and make us better at team-working. This project is about optimizing and analysis of algorithms, and our main question is: How can a program be developed which helps the customer through the progress of packing one or more suitcases the most effective way by size and weight?
+The goal with this project is to give us skills in using the programming language C\# (C-Sharp), and make us better at team-working. This project is about optimizing and analysis of algorithms, and our main question is: How can a program be developed which helps the customer through the progress of packing one or more suitcases the most effective way by size and weight?
