--- a/Personlige mapper/Chr/test.tex
+++ b/Personlige mapper/Chr/test.tex
@@ -2,7 +2,6 @@
 \input{../../LaTeX/preamble}
 \begin{document}
 
-\input{ThePackingAlgorithm.tex}
-\kode{hejcap}{hefdas}{ColourGiverListing1.txt}
+\input{ThePackingAlgorithmCode.tex}
 
 \end{document}
