--- a/LaTeX/Klar - Anden gang rettelse/ColorGiver.tex
+++ b/LaTeX/Klar - Anden gang rettelse/ColorGiver.tex
@@ -3,13 +3,13 @@ This function gives each item a color and ensures that items that lie next to ea
 \\
 The first step is to add all the item's points into a list, this is done for all items that are to be packed. First off a "for" loop runs through the items that are to be packed. Inside the first "for" loop there are three "for" loops that run through the x, y and z values starting at the saved point for the current item. The loops then runs until the limits are reached for the three "for" loops which are the height, width and length. These loops can be seen listing \ref{lst:ColorGiverListing1}. At the end of the three "for" loop there are an "if" statement which controls that it is only coordinates(x, y, and z) on the outside of an item that are added. The "if" statement works by checking if one of the coordinates (x, y or z) is either at the respective start point(saved point x, y, or z) or at the maximum limit (height, weight or length) and then only allow points where this is fulfilled and thereby achieve coordinates on the outside of the item.
 When the "if" statement is fulfilled the three integers x, y and z are added to their representative lists that are stored in a temporary variable of type cbox. Cbox is a class that has 3 lists in it. These three lists outlines the sides of their respective object. The temporary variable are then stored in the BoxColor list which is the final list.\\ 
-\kode{The four "for" loops which controls the item and the x, y, z value that make the point for the items}{ColorGiverListing1}{ColorGiverListing1.txt}
+\kode{The four "for" loops which controls the item and the x, y, z value that make the point for the items. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing1}{ColorGiverListing1.txt}
 \\
 The second step is to check which items are neighbor through two "for" loops. Thereby determining if they are located next to each other. If they are, the item number will be saved in a list that is called neighbor. This step works by four "for" loops where the first loop keeps track of the current item that is being checked for neighbors, the second loop keeps track of the item that is being checked, and if it is a neighbor to the first one. The last two loops works with the points that are in the items lists that are being worked with. But it will only run these loop if the items are in the same suitcase (Which can be seen by the "if" sentence that are between the two first and the two last "for" loops). If they are next to each other it will save the items number into a list in the other item. This is done for the other item which is being checked as well. The 2 loops and setting of a items neighbor can be seen on listing \ref{lst:ColorGiverListing2}.\\
-\kode{The 2 "for" loops and the "if" statement that check if the two items shares any point}{ColorGiverListing2}{ColorGiverListing2.txt}
+\kode{The 2 "for" loops and the "if" statement that check if the two items shares any point. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing2}{ColorGiverListing2.txt}
 \\
 Thereafter the list "neighbor" is gone through to remove all the duplicates of themselves from the list. This work with one "for" loop that keeps track of which items are being worked with and when the loop is done the neighbor list is sorted. Then there is a "while" loop that goes through all the neighbors (items that are next to it) and check if the item itself is in it and remove it. It will also check if the number after the current is the same, if it is it will remove one of them. This can be seen in listing \ref{lst:ColorGiverListing3}.\\
-\kode{"If" statements that checks the item after the current item to see if they are identical, if they are remove one of them}{ColorGiverListing3}{ColorGiverListing3.txt}
+\kode{"If" statements that checks the item after the current item to see if they are identical, if they are remove one of them. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing3}{ColorGiverListing3.txt}
 \\
 The last step taken is to go through the item list and give a color to each item. In this part the colors are numbers, where number 0 is the standard color. First there is a "for" loop that sets the current item. Before the current item is given a number based on its neighbors, its value is set to 0. Then there is a "while" loop that goes through all the item's neighbors and check if the color is the same. If they are the same, then the item's color number is increased by 1. This can be seen in listing \ref{lst:ColorgiverListing4}. When the neighbor list is finished, the color is saved in the item, the color number is set to 0 again, and the next item in the list is checked.
-\kode{"If" statement that checks if an item and neighbor have the same color}{ColorGiverListing4}{ColorGiverListing4.txt}
+\kode{"If" statement that checks if an item and neighbor have the same color. The slice of code is taken from the function Colors in frmMain}{ColorGiverListing4}{ColorGiverListing4.txt}
