--- a/LaTeX/Rapport - NIX PILLE/Rapport.tex
+++ b/LaTeX/Rapport - NIX PILLE/Rapport.tex
@@ -66,6 +66,7 @@
 \label{chap:development}
 \input{indhold/development/developmentintro.tex}
 \input{indhold/development/ColorGiver.tex}
+\input{indhold/development/FunctionDrawCubes.tex}
 
 \chapter{Testing} 
 \label{chap:testing}
